fefactor: split 51vm code to separate files.

--- a/main.html
+++ b/main.html
@@ -2,9 +2,15 @@
 <html>
 
 <head>
-    <script src="51vm.js"></script>
+    <script src="51vm_core.js"></script>
+    <script src="51vm_operand.js"></script>
+    <script src="51vm_operation.js"></script>
+    <script src="51vm_opcode_decoder.js"></script>
+    <script src="51vm_ctl.js"></script>
+    <script src="peripheral_serial.js"></script>
+    
     <script src="test.js"></script>
-    <script src="get_serial.js"></script>
+    
     <script src="hex_decoder.js"></script>
     <script>
 
